--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,12 @@
     <script src="/static/js/game.js" defer></script>
 </head>
 <body>
+    <div class="scores">
+        <p>Scores</p>
+        <p id="score-counter">0</p>
+
+    </div>
+    <div class="start"><button type="button" id="start-button">Start Game</button></div>
     <div class="board"></div>
 
 </body>
