--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
 
     </div>
     <div class="start"><button type="button" id="start-button">Start Game</button></div>
+    <div class="count-down">10</div>
     <div class="board"></div>
 
 </body>
