--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,13 @@
     <script src="/static/js/game.js" defer></script>
 </head>
 <body>
-    <div class="scores">
-        <p>Scores</p>
-        <p id="score-counter">0</p>
-
+    <div class="game-info-fields">
+        <div><p>Scores</p></div>
+        <div><p id="score-counter">0</p></div>
+        <div class="buttons"><button type="button" id="start-button">Start Game</button></div>
+        <div class="buttons"><button type="button" id="new-game-button">New Game</button></div>
+        <div class="count-down">60</div>
     </div>
-    <div class="start"><button type="button" id="start-button">Start Game</button></div>
-    <div class="count-down">60</div>
     <div class="board"></div>
 
 </body>
