Modify CSS (game-info-fields)

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="game-info-fields">
-        <div><p>Scores</p></div>
-        <div><p id="score-counter">0</p></div>
+        <div class="scores">Scores</div>
+        <div class="scores" id="score-counter">0</div>
         <div class="buttons"><button type="button" id="start-button">Start Game</button></div>
         <div class="buttons"><button type="button" id="new-game-button">New Game</button></div>
         <div class="count-down">60</div>
