--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,7 @@ body {
     background-size: cover;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 .game-info-fields {
@@ -10,14 +11,17 @@ body {
     float: left;
     /*margin: 500px;*/
     background-color: #E6C8F3;
-    margin-top: 10em;
+    /*margin-top: 10em;*/
     border-style: ridge;
     border-width: 5px;
     border-color: darksalmon;
+    display: flex;
+    flex-direction: column;
+
 }
 
 .game-info-fields > * {
-    margin: 30px;
+    margin: 10px;
     /*margin-left: 50px;*/
 
 }
@@ -35,8 +39,6 @@ body {
     margin-top: 50px;
     margin-right: 120px;
     padding: 20px 10px 10px 10px;
-    ;
-
 }
 
 .board .cell {
@@ -48,7 +50,6 @@ body {
 
 .Laci {
     background: url("/static/images/Laci.png");
-    ;
 }
 
 .Adam {
@@ -71,12 +72,10 @@ body {
     background: url("/static/images/Reka.png");
 }
 
-.scores p {
-    background-color: lightblue;
+.scores{
     display: flex;
     flex-wrap: wrap;
     max-width: 50px;
-    justify-content: stretch;
 
 }
 
@@ -110,4 +109,64 @@ body {
     padding: 6px 24px;
     text-decoration: none;
     text-shadow: rgb(199, 0, 103) 0px 1px 0px;
+}
+
+.Laci-horizontal {
+    background: url("/static/images/Laci_vizszintes.png");
+    background-size: 70px 70px;
+}
+
+.Adam-horizontal {
+    background: url("/static/images/Adam_vizszintes.png");
+    background-size: 70px 70px;
+}
+
+.Agi-horizontal {
+    background: url("/static/images/Agi_vizszintes.png");
+    background-size: 70px 70px;
+}
+
+.Bence-horizontal {
+    background: url("/static/images/Bence_vizszintes.png");
+    background-size: 70px 70px;
+}
+
+.Gabor-horizontal {
+    background: url("/static/images/Gabor_vizszintes.png");
+    background-size: 70px 70px;
+}
+
+.Reka-horizontal {
+    background: url("/static/images/Reka_vizszintes.png");
+    background-size: 70px 70px;
+}
+
+.Laci-vertical {
+    background: url("/static/images/Laci_fuggoleges.png");
+    background-size: 70px 70px;
+}
+
+.Adam-vertical {
+    background: url("/static/images/Adam_fuggoleges.png");
+    background-size: 70px 70px;
+}
+
+.Agi-vertical {
+    background: url("/static/images/Agi_fuggoleges.png");
+    background-size: 70px 70px;
+}
+
+.Bence-vertical {
+    background: url("/static/images/Bence_fuggoleges.png");
+    background-size: 70px 70px;
+}
+
+.Gabor-vertical {
+    background: url("/static/images/Gabor_fuggoleges.png");
+    background-size: 70px 70px;
+}
+
+.Reka-vertical {
+    background: url("/static/images/Reka_fuggoleges.jpg");
+    background-size: 70px 70px;
 }
