--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,23 +7,20 @@ body {
 }
 
 .game-info-fields {
-    /*display: inline-flex;*/
+    padding: 20px;
     float: left;
-    /*margin: 500px;*/
     background-color: #E6C8F3;
-    /*margin-top: 10em;*/
     border-style: ridge;
     border-width: 5px;
     border-color: darksalmon;
     display: flex;
     flex-direction: column;
+    align-items: center;
 
 }
 
 .game-info-fields > * {
     margin: 10px;
-    /*margin-left: 50px;*/
-
 }
 
 .board {
@@ -78,13 +75,6 @@ body {
     background-size: 70px 70px;
 }
 
-.scores{
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 50px;
-
-}
-
 #start-button {
     box-shadow: rgb(239, 220, 251) 0px 1px 0px 0px inset;
     background: linear-gradient(rgb(173, 74, 216) 5%, rgb(188, 128, 234) 100%) rgb(223, 189, 250);
@@ -115,6 +105,7 @@ body {
     padding: 6px 24px;
     text-decoration: none;
     text-shadow: rgb(199, 0, 103) 0px 1px 0px;
+    margin-top: 20px;
 }
 
 .scores {
@@ -126,9 +117,9 @@ body {
     cursor: default;
     color: rgb(255, 255, 255);
     font-family: Arial, serif;
-    font-size: 15px;
+    font-size: 20px;
     font-weight: bold;
-    padding: 20px 20px;
+    padding: 15px 15px;
     text-decoration: none;
     text-shadow: rgb(199, 0, 103) 0px 1px 0px;
     text-align: center;
@@ -143,7 +134,7 @@ body {
     cursor: default;
     color: rgb(255, 255, 255);
     font-family: Arial, serif;
-    font-size: 15px;
+    font-size: 20px;
     font-weight: bold;
     padding: 6px 24px;
     text-decoration: none;
