add start game sound

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,10 @@
         <div class="scores">Scores:</div>
         <div class="scores" id="score-counter">0</div>
         <div class="count-down">180</div>
-        <div class="buttons"><button type="button" id="start-button">Start Game</button></div>
+        <div class="buttons">
+            <audio id="start_game_sound" src="/static/sounds/start_game.mp3"> </audio>
+            <button onclick="document.getElementById('start_game_sound').play()" type="button" id="start-button">Start Game</button>
+        </div>
         <div class="buttons"><button type="button" id="new-game-button"><a href="{{ url_for("home") }}">New Game</a></button></div>
     </div>
     <div class="board"></div>
