Change Codecool logo to the new one

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -213,6 +213,6 @@ a:visited {
 }
 
 .Codecool[data-subtype="3"] {
-    background: url("/static/images/codecool.png");
+    background: url("/static/images/codecool_new.jpg");
     background-size: 70px 70px;
 }
